# xsdba

./: .cruft.json  .flake8  .gitignore  .pre-commit-config.yaml  .readthedocs.yml  CHANGELOG.rst  CITATION.cff  CODE_OF_CONDUCT.md  CONTRIBUTING.rst  Makefile  README.rst  environment-dev.yml  environment-docs.yml  pyproject.toml  tox.ini  tox.toml
.github/: labeler.yml
.github/workflows/: bump-version.yml  cache-cleaner.yml  codeql.yml  dependency-review.yml  first-pull-request.yml  main.yml  publish-pypi.yml  scorecard.yml  tag-testpypi.yml  upstream.yml  workflow-warning.yml
CI/: requirements_ci.in  requirements_ci.txt
docs/: Makefile  conf.py  index.rst  installation.rst  references.bib  releasing.rst  xsdba.rst
docs/_static/: style.css
docs/notebooks/: advanced_example.ipynb
src/xsdba/: __init__.py  _adjustment.py  _processing.py  adjustment.py  base.py  cli.py  detrending.py  formatting.py  loess.py  measures.py  nbutils.py  options.py  processing.py  properties.py  typing.py  units.py  utils.py
src/xsdba/testing/: diagnostics.py  helpers.py  sdba_utils.py  utils.py
tests/: conftest.py  test_adjustment.py  test_base.py  test_detrending.py  test_loess.py  test_measures.py  test_nbutils.py  test_processing.py  test_properties.py  test_units.py  test_utils.py  test_xsdba.py
