[build-system]
requires = ["flit_core >=3.11.0,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "xsdba"
authors = [
  {name = "Éric Dupuis", email = "dupuis.eric@ouranos.ca"},
  {name = "Pascal Bourgault", email = "bourgault.pascal@ouranos.ca"}
]
maintainers = [
  {name = "Éric Dupuis", email = "dupuis.eric@ouranos.ca"},
  {name = "Trevor James Smith", email = "smith.trevorj@ouranos.ca"}
]
readme = {file = "README.rst", content-type = "text/x-rst"}
requires-python = ">=3.10.0"
keywords = ["xsdba", "bias adjustment", "statistics", "statistical downscaling", "xarray", "xclim"]
license = "Apache-2.0"
license-files = ["LICENSE"]
classifiers = [
  "Development Status :: 4 - Beta",
  "Intended Audience :: Developers",
  "Intended Audience :: Science/Research",
  "Natural Language :: English",
  "Operating System :: OS Independent",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Programming Language :: Python :: Implementation :: CPython",
  "Topic :: Scientific/Engineering :: Atmospheric Science",
  "Topic :: Scientific/Engineering :: Information Analysis",
  "Topic :: Scientific/Engineering :: Mathematics",
  "Typing :: Typed"
]
dynamic = ["description", "version"]
dependencies = [
  "boltons >=20.1",
  "bottleneck >=1.3.1",
  "cf_xarray>=0.10.0",
  "cftime >=1.4.1",
  "dask[array] >=2024.8.1",
  "filelock >=3.14.0",
  "jsonpickle >=3.1.0",
  "numba >=0.58.1",
  "numpy >=1.26.0",
  "packaging",
  "pandas >=2.2.0,<3.0",
  "pint>=0.24.4",
  "rich >=13.7.0",
  "scipy >=1.11.0",
  "statsmodels >=0.14.2",
  "typer >=0.16.0",
  "xarray >=2023.11.0"
]

[project.optional-dependencies]
dev = [
  # Dev tools and testing
  "bump-my-version >=1.2.3",
  "codespell >=2.4.1",
  "coverage >=7.5.0",
  "deptry >=0.23.1",
  "flake8 >=7.3.0",
  "flake8-rst-docstrings >=0.4.0",
  "flit >=3.11.0,<4.0",
  "h5netcdf >=1.3.0",
  "h5py >=3.12.1",
  "mypy >=1.18.2",
  "matplotlib >=3.6.0",
  "numpydoc >=1.9.0",
  "pip >=25.2",
  "pooch >=1.8.0",
  "pre-commit >=3.5.0",
  "pytest >=9.0.0",
  "pytest-cov >=5.0.0",
  "pytest-xdist >=3.2.0",
  "ruff >=0.13.3",
  "tox >=4.30.3",
  "vulture >=2.14",
  "watchdog >=4.0.0",
  "xdoctest >=1.1.5",
  "yamllint >=1.35.1"
]
docs = [
  # Documentation and examples
  "furo >=2023.9.10",
  "h5netcdf >=1.5.0",
  "h5py >=3.12.1",
  "ipykernel",
  "ipython >=8.5.0",
  "jupyter_client",
  "matplotlib >=3.8.0",
  "nbsphinx >=0.9.8",
  "nc-time-axis >=1.4.1",
  "pooch >=1.8.0",
  "pygments",
  "sphinx >=8.2.2", # pinned until nbsphinx supports sphinx 8.2
  "sphinx-autobuild >=2024.4.16",
  "sphinx-autodoc-typehints >=3.1.0",
  "sphinx-codeautolink>=0.16.2",
  "sphinx-copybutton",
  "sphinx-intl",
  "sphinx-mdinclude",
  "sphinxcontrib-bibtex"
]
extras = [
  "fastnanquantile >=0.0.2",
  "POT >=0.9.4",
  "xclim >=0.56.0"
]
sbck = [
  # The sbck dependency requires the "eigen3"/"libeigen3-dev" package to be installed on the system.
  "sbck >=1.4.2"
]
all = ["xsdba[dev]", "xsdba[docs]", "xsdba[extras]", "xsdba[sbck]"]

[project.scripts]
xsdba = "xsdba.cli:app"

[project.urls]
"Homepage" = "https://xsdba.readthedocs.io/"
"Changelog" = "https://xsdba.readthedocs.io/en/stable/changelog.html"
"About Ouranos" = "https://ouranos.ca/en/"
"Issue tracker" = "https://github.com/Ouranosinc/xsdba/issues"
"Source" = "https://github.com/Ouranosinc/xsdba"

[tool]

[tool.bumpversion]
current_version = "0.5.1-dev.8"
commit = true
commit_args = "--no-verify"
tag = false
tag_name = "v{new_version}"
allow_dirty = true
parse = "(?P<major>\\d+)\\.(?P<minor>\\d+)\\.(?P<patch>\\d+)(\\-(?P<release>[a-z]+)(\\.(?P<build>\\d+)))?"
serialize = [
  "{major}.{minor}.{patch}-{release}.{build}",
  "{major}.{minor}.{patch}"
]

[[tool.bumpversion.files]]
filename = "CHANGELOG.rst"
include_bumps = ["release"]
search = """\
`Unreleased <https://github.com/Ouranosinc/xsdba>`_ (latest)
------------------------------------------------------------
"""
replace = """\
..
    `Unreleased <https://github.com/Ouranosinc/xsdba>`_ (latest)
    ------------------------------------------------------------

    Contributors:

    Changes
    ^^^^^^^
    * No change.

    Fixes
    ^^^^^
    * No change.

.. _changes_{new_version}:

`v{new_version} <https://github.com/Ouranosinc/xsdba/tree/{new_version}>`_ ({now:%Y-%m-%d})
-----------------------------------------------------------------------
"""

[[tool.bumpversion.files]]
filename = "CITATION.cff"
include_bumps = ["release"]
search = "version: \"[0-9]+\\.[0-9]+\\.[0-9]\""
regex = true
replace = "version: {new_version}"

[[tool.bumpversion.files]]
filename = "src/xsdba/__init__.py"
search = "__version__ = \"{current_version}\""
replace = "__version__ = \"{new_version}\""

[[tool.bumpversion.files]]
filename = "tests/test_xsdba.py"
search = "__version__ = \"{current_version}\""
replace = "__version__ = \"{new_version}\""

[[tool.bumpversion.files]]
filename = ".cruft.json"
search = "\"version\": \"{current_version}\""
replace = "\"version\": \"{new_version}\""

[tool.bumpversion.parts.build]
independent = false

[tool.bumpversion.parts.release]
optional_value = "release"
values = [
  "dev",
  "release"
]

[tool.codespell]
skip = '*docs/_build,*docs/references.bib,*.gz,*.png,*.svg,*.whl'
ignore-words-list = "astroid,hanel,indx,lond,ot,socio-economic"

[tool.coverage.paths]
source = ["src/xsdba/", "*/site-packages/xsdba/"]

[tool.coverage.run]
omit = ["tests/*.py"]
relative_files = true
source = ["xsdba"]

[tool.deptry]
extend_exclude = ["docs"]
ignore_notebooks = true
pep621_dev_dependency_groups = ["all", "dev", "docs", "extras", "sbck"]

[tool.deptry.package_module_name_map]
"scikit-learn" = "sklearn"
"POT" = "ot"
"sbck" = "SBCK"

[tool.deptry.per_rule_ignores]
DEP004 = ["fastnanquantile", "ot", "matplotlib", "pooch", "SBCK", "xclim"]

[tool.flit.sdist]
include = [
  ".zenodo.json",
  "AUTHORS.rst",
  "CHANGELOG.rst",
  "CONTRIBUTING.rst",
  "LICENSE",
  "Makefile",
  "README.rst",
  "environment-dev.yml",
  "environment-docs.yml",
  "docs/_static/_images/*.gif",
  "docs/_static/_images/*.jpg",
  "docs/_static/_images/*.png",
  "docs/_static/_images/*.rst",
  "docs/Makefile",
  "docs/conf.py",
  "docs/make.bat",
  "src/xsdba",
  "tests/*.py",
  "tox.ini"
]
exclude = [
  "*.py[co]",
  "__pycache__",
  ".coveralls.yml",
  ".editorconfig",
  ".flake8",
  ".gitignore",
  ".pre-commit-config.yaml",
  ".readthedocs.yml",
  ".yamllint.yaml",
  ".zizmor.yml",
  "docs/_*",
  "docs/apidoc/modules.rst",
  "docs/apidoc/xsdba*.rst"
]

[tool.mypy]
files = "."
python_version = "3.10"
show_error_codes = true
strict = true
warn_no_return = true
warn_return_any = true
warn_unreachable = true
warn_unused_configs = true

[[tool.mypy.overrides]]
module = [
  # Don't require test functions to include types
  "tests.*"
]
allow_untyped_defs = true
disable_error_code = "attr-defined"
ignore_missing_imports = true

# SPLIT: many checks removed
[tool.numpydoc_validation]
checks = [
  "all", # report on all checks, except the below
  "ES01",
  "EX01",
  "GL01",
  "GL08",
  "PR01",
  "PR02",
  "PR04",
  "PR07",
  "PR08",
  "PR10",
  "RT01",
  "RT03",
  "SA01",
  "SA04",
  "SS01",
  "SS03",
  "SS06"
]
# remember to use single quotes for regex in TOML
exclude = [
  # don't report on objects that match any of these regex
  '\.undocumented_method$',
  '\.__repr__$'
]
override_SS05 = [
  # override SS05 to allow docstrings starting with these words
  '^Process ',
  '^Assess ',
  '^Access '
]

[tool.pytest]
minversion = "9.0"
addopts = [
  "-ra",
  "--color=yes",
  "--cov=xsdba",
  "--numprocesses=0",
  "--maxprocesses=8",
  "--dist=worksteal",
  "--strict"
]
norecursedirs = ["docs/notebooks/*"]
filterwarnings = ["ignore::UserWarning"]
strict_markers = true
testpaths = ["tests"]
usefixtures = ["xdoctest_namespace"]
markers = [
  "slow: mark test as slow",
  "requires_internet: mark test as requiring network access"
]

[tool.ruff]
src = ["xsdba"]
line-length = 150
exclude = [
  ".eggs",
  ".git",
  "build",
  "docs"
]

[tool.ruff.format]
docstring-code-format = true
docstring-code-line-length = "dynamic"
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"

[tool.ruff.lint]
extend-select = [
  "D213", # multi-line-summary-second-line
  "RUF022" # unsorted-dunder-all
]
ignore = [
  "COM", # commas
  "D205", # blank-line-after-summary
  "D400", # ends-in-period
  "D401", # non-imperative-mood
  # WIP xsdba
  "E402", # top import module
  "E712", # use cond == False
  "D200",
  "FLY002",
  "N801",
  "N803",
  "N806",
  "PTH123",
  "S310",
  "PERF401", # don't force list comprehensions
  "PERF203", # allow try/except in loop
  "E501", # line too long
  "W505" # doc line too long
]
preview = true
select = [
  "B", # bugbear
  "BLE", # blind-except
  "C90", # mccabe-complexity
  "D", # docstrings
  "E", # pycodestyle errors
  "F", # pyflakes
  "FLY002", # static-join-to-fstring
  "G", # logging-format
  "I", # imports
  "N", # naming conventions
  "PERF", # iterator performance
  "PTH", # pathlib
  "RUF010", # explicit-f-string-type-conversion
  "RUF013", # implicit-optional
  "S", # bandit
  "UP", # python version conventions
  "W" # pycodestyle warnings
]

[tool.ruff.lint.flake8-bandit]
check-typed-exception = true

[tool.ruff.lint.isort]
known-first-party = ["xsdba"]
case-sensitive = true
detect-same-package = false
lines-after-imports = 2
no-lines-before = ["future", "standard-library"]

[tool.ruff.lint.mccabe]
max-complexity = 15

[tool.ruff.lint.per-file-ignores]
"docs/**" = ["E402"]
"src/xsdba/**/__init__.py" = ["F401", "F403"]
"tests/**" = ["D100", "D101", "D102", "D103", "S101"]

[tool.ruff.lint.pycodestyle]
max-doc-length = 180

[tool.ruff.lint.pydocstyle]
convention = "numpy"

[tool.vulture]
exclude = []
ignore_decorators = ["@pytest.fixture"]
ignore_names = []
min_confidence = 90
paths = ["src/xsdba", "tests"]
sort_by_size = true
